# ChangeLog for dev-libs/geoip
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.96 2008/12/28 18:20:32 pva Exp $

  28 Dec 2008; Peter Volkov <pva@gentoo.org>
  +files/geoip-1.4.5-ppc-fix.patch, geoip-1.4.5.ebuild:
  Finally fixed test failure on ppc64 and marking it stable, bug #244256.
  Thank Brent Baude for hardware access.

  26 Oct 2008; Raúl Porcel <armin76@gentoo.org> geoip-1.4.5.ebuild:
  alpha/ia64/sparc/x86 stable wrt #244256

  26 Oct 2008; Jeroen Roovers <jer@gentoo.org> geoip-1.4.5.ebuild:
  Stable for HPPA (bug #244256).

  25 Oct 2008; Thomas Anderson <gentoofan23@gentoo.org> geoip-1.4.5.ebuild:
  stable amd64, bug 244256

  25 Oct 2008; nixnut <nixnut@gentoo.org> geoip-1.4.5.ebuild:
  Stable on ppc wrt bug 244256

*geoip-1.4.5 (24 Sep 2008)

  24 Sep 2008; Peter Volkov <pva@gentoo.org>
  +files/geoip-1.4.4-no-noinst_PROGRAMS.patch,
  +files/geoip-1.4.4-parallel-build.patch, -geoip-1.4.2.ebuild,
  -geoip-1.4.3.ebuild, +geoip-1.4.5.ebuild:
  Version bump. Fixed parallel make failure #180988, thank Mike Doty for
  report. Do not build test programs, bug #226207, thank Diego Pettenò for
  report. Remove old.

  15 Mar 2008; Markus Rothe <corsair@gentoo.org> geoip-1.4.4.ebuild:
  Stable on ppc64; bug #212359

  13 Mar 2008; Jeroen Roovers <jer@gentoo.org> geoip-1.4.4.ebuild:
  Stable for HPPA (bug #212359).

  06 Mar 2008; nixnut <nixnut@gentoo.org> geoip-1.4.4.ebuild:
  Stable on ppc wrt bug 212359

  05 Mar 2008; Raúl Porcel <armin76@gentoo.org> geoip-1.4.4.ebuild:
  alpha/ia64/sparc/x86 stable wrt #212359

  05 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> geoip-1.4.4.ebuild:
  amd64 stable wrt bug #212359

  08 Feb 2008; Santiago M. Mola <coldwind@gentoo.org> geoip-1.4.3.ebuild:
  amd64 stable wrt bug #208150

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> geoip-1.4.3.ebuild:
  Stable on ppc64

  31 Jan 2008; nixnut <nixnut@gentoo.org> geoip-1.4.3.ebuild: