@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/Attic/geoip-1.4.5.ebuild,v 1.6 2008/12/28 18:20:32 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/Attic/geoip-1.4.5.ebuild,v 1.7 2009/02/24 18:40:07 armin76 Exp $
 
 inherit autotools eutils libtool
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.maxmind.com/download/geoip/api/c/${MY_P}.tar.gz"
 # GPL-2 for md5.c - part of libGeoIPUpdate, MaxMind for GeoLite Country db
 LICENSE="LGPL-2.1 GPL-2 MaxMind"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 ~arm hppa ia64 ppc ppc64 ~s390 ~sh sparc x86 ~x86-fbsd"
 IUSE=""
 
 S=${WORKDIR}/${MY_P}
