@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/geoip
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.96 2008/12/28 18:20:32 pva Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.97 2009/02/24 18:40:07 armin76 Exp $
+
+  24 Feb 2009; Raúl Porcel <armin76@gentoo.org> geoip-1.4.5.ebuild:
+  Add ~arm/~s390/~sh
 
   28 Dec 2008; Peter Volkov <pva@gentoo.org>
   +files/geoip-1.4.5-ppc-fix.patch, geoip-1.4.5.ebuild:
